--- a/src/res/values/strings.xml
+++ b/src/res/values/strings.xml
@@ -22,5 +22,5 @@
     <string name="dashclock_card_expand_action">Action</string>
     <string name="dashclock_card_expand_settings">Settings</string>
     <string name="no_extensions_card_title">Get some extensions!</string>
-    <string name="no_extensions_card_body">Looks like you don\'t have any installed extensions. CM Home currently supports DashClock extensions, so go get some and check back here!</string>
+    <string name="no_extensions_card_body">Looks like you don\'t have any installed DashClock extensions. Go get some and check back here!</string>
 </resources>
