--- a/src/res/values/strings.xml
+++ b/src/res/values/strings.xml
@@ -16,8 +16,17 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <string name="app_name">CM Home</string>
+
+    <!-- Permissions -->
     <string name="permission_label_read_extension_data">request DashClock extension data</string>
     <string name="permission_desc_read_extension_data">Allows the app to request DashClock extension data</string>
+    <string name="permission_desc_feed_host">Can read any write from any applications
+       that publish cards to CM Home.</string>
+    <string name="permission_label_feed_host">Publish and unpublish cards from CM Home.</string>
+    <string name="permission_desc_feed_publish">Can add new cards to any CM Home on your
+        launcher.</string>
+    <string name="permission_label_feed_publish">Publish cards to launcher CM Home.</string>
+
     <string name="dashclock_activity_not_found_toast_message">The intended Activity for this extension was not found. Please contact the developer for more info.</string>
     <string name="dashclock_card_expand_action">Action</string>
     <string name="dashclock_card_expand_settings">Settings</string>
